# xontrib-pygitstatus

./: .editorconfig  .gitignore  .xonshrc  LICENSE  README.md  SetEnv.ps1  TODO.md  XONTRIB_PROMOTION.md  pygit2_status_codes.py  pyproject.toml  sample_async.xsh
.github/workflows/: release-testpypi.yml  release.yml  test.yml
tests/: test_autoload.py  test_gitstatus.py  test_xontrib.py
xontrib/pygitstatus/: __init__.py  entrypoint.py  prompt.py  prompts.py
xontrib_pygitstatus/: event_hooks.py  main.py
